Update 'tr2aw7pgs-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe:0b7f6585429011f95e150c5684428dbdf7a1ba1f@sha256:27cf3af09cd207f3596c956d6a26830af0af50910a895ad7ea1aba436f4014bc

--- a/components/tr2aw7pgs-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/tr2aw7pgs-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tr2aw7pgs-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:0b7f6585429011f95e150c5684428dbdf7a1ba1f@sha256:27cf3af09cd207f3596c956d6a26830af0af50910a895ad7ea1aba436f4014bc
+          name: container-image
